# FCCDetectors

./: CMakeLists.txt
Detector/: CMakeLists.txt
Detector/DetFCCeeCLD/compact/: FCCee_DectMaster.xml
Detector/DetFCCeeCLD/compact/FCCee_o2_v02/: FCCee_o2_v02.xml
Detector/DetFCCeeCLD_coolant/: CMakeLists.txt
Detector/DetFCCeeCLD_coolant/compact/: Beampipe_with_coolant.xml  Beampipe_with_notch.xml  FCCee_DectDimensions.xml  FCCee_DectMaster.xml  FCCee_Master_test.xml  additional_materials.xml
Detector/DetFCCeeCLD_coolant_smallBP/: CMakeLists.txt
Detector/DetFCCeeCLD_coolant_smallBP/compact/: #Beampipe_with_coolant.xml#  Beampipe_with_notch.xml  FCCee_DectDimensions.xml  FCCee_DectMaster.xml  FCCee_Master_test.xml  FCCee_o1_v04_upd_100519.xml  Vertex_o4_v05_smallBP_ciarma.xml
Detector/DetFCCeeCLD_long/compact/: FCCee_DectMaster.xml
Detector/DetFCCeeCLD_sens/compact/: FCCee_DectMaster.xml  Vertex.xml
Detector/DetFCCeeCLD_smallBP/: CMakeLists.txt
Detector/DetFCCeeCLD_smallBP/compact/: FCCee_DectMaster.xml
